--- a/src/Components/CarComponents/FlexCarCard/flexCarCard.scss
+++ b/src/Components/CarComponents/FlexCarCard/flexCarCard.scss
@@ -248,7 +248,7 @@
       font-size: 15px;
       li {
         display: flex;
-        align-items: end;
+        align-items: flex-end;
         gap: 3px;
       }
     }
