--- a/src/pages/UserChatsPage/userChatsPage.scss
+++ b/src/pages/UserChatsPage/userChatsPage.scss
@@ -1,8 +1,7 @@
 .chats {
-  margin-top: 50px;
+  margin: 50px 0 300px;
   display: grid;
   grid-template-columns: repeat(9, 1fr);
-  grid-template-rows: repeat(3, 1fr, auto);
 
   .links {
     grid-column: 2/9;
@@ -21,6 +20,10 @@
     margin-top: 50px;
     justify-self: center;
     text-align: center;
+    grid-column: 2/9;
+    grid-row: 2/4;
+  }
+  .no_chats {
     grid-column: 2/9;
     grid-row: 2/3;
   }
