--- a/src/Components/UserComponents/Chat/chat.scss
+++ b/src/Components/UserComponents/Chat/chat.scss
@@ -26,11 +26,16 @@
     }
   }
 }
+.no_chats {
+  color: white;
+  text-align: center;
+  margin: 50px auto 400px;
+}
 
 .messages_list {
   color: var(--textColor);
   width: 60%;
-  margin: 50px auto 0;
+  margin: 50px auto 125px;
   height: 550px;
   overflow: scroll;
   display: flex;
