--- a/src/features/AutohuntMap/autohuntMap.scss
+++ b/src/features/AutohuntMap/autohuntMap.scss
@@ -11,3 +11,13 @@
     width: 100%;
   }
 }
+@media (min-width: 1000px) and (max-width: 1200px) {
+  .autohunt_map {
+    width: 80%;
+  }
+}
+@media (min-width: 775px) and (max-width: 1000px) {
+  .autohunt_map {
+    width: 95%;
+  }
+}
