--- a/src/Components/Header/header.scss
+++ b/src/Components/Header/header.scss
@@ -1,5 +1,5 @@
 header {
-  width: 1440px;
+  width: 100%;
   height: 55px;
   background-color: var(--headerBG);
   color: var(--main-white);
@@ -52,7 +52,6 @@ header {
       display: flex;
       align-items: center;
       gap: 10px;
-      
       a {
         display: flex;
         align-items: center;
@@ -74,4 +73,23 @@ header {
   top: 0;
   z-index: 2;
   background-color: inherit;
+}
+@media (min-width: 1000px) and (max-width: 1200px) {
+  header {
+    nav {
+      .header-links {
+        gap: 40px;
+      }
+    }
+  }
+}
+@media (min-width: 775px) and (max-width: 1000px) {
+  header {
+    padding: 0 0 0 30px;
+    nav {
+      .header-links {
+        gap: 30px;
+      }
+    }
+  }
 }
