--- a/src/Components/MainPageNewsCard/mainPageNewsCard.scss
+++ b/src/Components/MainPageNewsCard/mainPageNewsCard.scss
@@ -47,3 +47,56 @@
     }
   }
 }
+
+@media (min-width: 1000px) and (max-width: 1200px) {
+  .news {
+    .sing_news {
+      width: 270px;
+      .description {
+        font-size: 13px;
+        gap: 5px;
+        h3 {
+          color: var(--carCardFontColor);
+        }
+      }
+      .car_image {
+        width: 100%;
+        height: 140px;
+        border-radius: var(--border-ra5);
+        display: block;
+      }
+      .expert {
+        font-size: 13px;
+        display: flex;
+        align-items: flex-end;
+        gap: 5px;
+      }
+    }
+  }
+}
+@media (min-width: 775px) and (max-width: 1000px) {
+  .news {
+    .sing_news {
+      width: 270px;
+      .description {
+        font-size: 13px;
+        gap: 5px;
+        h3 {
+          color: var(--carCardFontColor);
+        }
+      }
+      .car_image {
+        width: 100%;
+        height: 140px;
+        border-radius: var(--border-ra5);
+        display: block;
+      }
+      .expert {
+        font-size: 12px;
+        display: flex;
+        align-items: flex-end;
+        gap: 5px;
+      }
+    }
+  }
+}
