--- a/src/features/MainPageSlider/mainPageSlides.scss
+++ b/src/features/MainPageSlider/mainPageSlides.scss
@@ -49,3 +49,10 @@
 .slideshowDot.active {
   background-color: #007cc7;
 }
+@media (min-width: 775px) and (max-width: 1000px) {
+  .main-slide-description {
+    font-size: 30px;
+    margin-top: 100px;
+    margin-left: 50px;
+  }
+}
