--- a/src/features/RecommendedCars/recommendedCars.scss
+++ b/src/features/RecommendedCars/recommendedCars.scss
@@ -1,10 +1,4 @@
-.recommended.fade {
-  opacity: 0;
-}
-
 .recommended {
-  opacity: 1;
-  transition: 0.8s ease;
   padding-bottom: 50px;
   display: flex;
   flex-direction: column;
@@ -70,17 +64,13 @@
   }
 }
 
-.item-enter {
-  opacity: 0;
+@media (min-width: 1000px) and (max-width: 1200px) {
+  .recommended {
+    width: 80%;
+  }
 }
-.item-enter-active {
-  opacity: 1;
-  transition: opacity 0ms ease-in;
-}
-.item-exit {
-  opacity: 1;
-}
-.item-exit-active {
-  opacity: 0;
-  transition: opacity 0ms ease-in;
+@media (min-width: 775px) and (max-width: 1000px) {
+  .recommended {
+    width: 95%;
+  }
 }
