--- a/src/features/SellCar/CarFeatures/carFeatures.scss
+++ b/src/features/SellCar/CarFeatures/carFeatures.scss
@@ -26,3 +26,12 @@
     }
   }
 }
+@media (min-width: 775px) and (max-width: 1000px) {
+  .features {
+    .features_list {
+      li {
+        width: 33%;
+      }
+    }
+  }
+}
