--- a/src/pages/Login/login.scss
+++ b/src/pages/Login/login.scss
@@ -15,3 +15,13 @@
     grid-row: 1/3;
   }
 }
+@media (min-width: 775px) and (max-width: 1000px) {
+  .login_page {
+    margin: 100px 0;
+    gap: 40px;
+
+    .login_page_logo {
+      grid-column: 6/12;
+    }
+  }
+}
