--- a/src/pages/SignUp/signUp.scss
+++ b/src/pages/SignUp/signUp.scss
@@ -1,17 +1,27 @@
-.sign_up{
-    display: grid;
-    grid-template-columns: repeat(12, 1fr);
-    grid-template-rows: repeat(2, 1fr);
-    margin-top: 100px;
-  
-    .login_form {
-      grid-column: 2/6;
-      grid-row: 1/3;
-      align-self: center;
-    }
-  
+.sign_up {
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  margin-top: 100px;
+
+  .login_form {
+    grid-column: 2/6;
+    grid-row: 1/3;
+    align-self: center;
+  }
+
+  .login_page_logo {
+    grid-column: 8/12;
+    grid-row: 1/3;
+  }
+}
+@media (min-width: 775px) and (max-width: 1000px) {
+  .sign_up {
+    margin: 100px 0;
+    gap: 40px;
+
     .login_page_logo {
-      grid-column: 8/12;
-      grid-row: 1/3;
+      grid-column: 6/12;
     }
+  }
 }
