--- a/src/pages/UsedCars/usedCars.scss
+++ b/src/pages/UsedCars/usedCars.scss
@@ -22,3 +22,27 @@
     margin: 50px 0;
   }
 }
+@media (min-width: 775px) and (max-width: 1000px) {
+  .used_cars {
+  margin-top: 20px;
+
+    .filters {
+      grid-column: 2/4;
+      grid-row: 1/8;
+      position: absolute;
+      z-index: 2000;
+    }
+    .tiny_panel_view {
+      grid-column: 6/8;
+      grid-row: 1/2;
+      padding-left:250px;
+    }
+    .pagination {
+      grid-column: 6/8;
+      grid-row: 10/11;
+      .inner_pagination {
+        margin: 0 auto;
+      }
+    }
+  }
+}
